# restaurant_booking

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
accounts/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
bookings/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
bookings/migrations/: 0001_initial.py
config/: settings.py  urls.py
main/: admin.py  apps.py  context_processors.py  models.py  urls.py  views.py
main/migrations/: 0001_initial.py
static/css/: custom.css
templates/: base.html
templates/accounts/: booking_confirm_delete.html  booking_edit.html:.html  profile.html  register.html
templates/admin/: base_site.html
templates/bookings/: booking_form.html  booking_success.html
templates/main/: about.html  home.html
templates/registration/: logged_out.html  login.html
